@@ -1,7 +1,7 @@
 SUBDIRS=test
 
 lib_LTLIBRARIES = libgncmod-backend-postgres.la 
-libgncmod_backend_postgres_la_LDFLAGS =-module -lpq -L../../engine -lgncengine ${GLIB_LIBS}
+libgncmod_backend_postgres_la_LDFLAGS =-module -lpq -L../../engine -lgncmod-engine ${GLIB_LIBS}
 
 libgncmod_backend_postgres_la_SOURCES = \
   PostgresBackend.c \
