@@ -7,7 +7,7 @@ libbaz_la_LDFLAGS=-module
 libbaz_la_SOURCES=baz.c
 
 libgncmodbaz_la_SOURCES=baz-gwrap.c gnc-mod-baz.c
-libgncmodbaz_la_LDFLAGS=-module -L.libs -L../mod-foo/.libs
+libgncmodbaz_la_LDFLAGS=-module -L../mod-foo
 libgncmodbaz_la_LIBADD=-lbaz -lfoo
 
 baz-gwrap.c baz-gwrap.h: baz-gwrap.scm
